# ifsql

./: .coveragerc  AUTHORS.rst  CHANGES.rst  LICENSE.txt  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt
docs/: IMPLEMENTATION.md  Makefile  conf.py  draw.io.relation-schema.xml  index.rst
ifsql/: __init__.py  __main__.py  analyse.py  cmd.py  database.py  main.py  parser.py
sqlgrep/: database.py  main.py  parser.py  skeleton.py
tests/: conftest.py  test_db_objects.py  test_db_queries.py  test_db_query.py  test_parser.py  test_skeleton.py
